# train-idle-uk-ops

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  train_idle.py  train_idle_monolith.py
.github/workflows/: ci.yml
tests/: test_blocks.py  test_save_load.py  test_smoke.py
train_idle/: __init__.py  __main__.py  blocks.py  data.py  graph.py  models.py  realism.py  save.py
