[project]
name = "train-idle-uk-ops"
version = "0.5.6"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203","E501"]  # common formatting edge case

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"